# SPZ

./: README.md
6DOFposeEstimation/: 6DOFposeEstimation.cpp  CMakeLists.txt
6DOFposeEstimation/data/: modelList.txt
beginner_tutorials/: CMakeLists.txt  package.xml
beginner_tutorials/config/: rviz-config.rviz
beginner_tutorials/data/: pointcloud.pcd
beginner_tutorials/launch/: showPointCloud.launch  test.launch
beginner_tutorials/src/: listener.cpp
correspondenceGrouping/: CMakeLists.txt  correspondence_grouping.cpp
poseEstimation/: CMakeLists.txt  poseEstimation.cpp  poseEstimation_singleViewer.cpp
poseEstimation/data/: output_convertingSTL2PCD.pcd  pointcloud_1_down.pcd  stl2pcd_selfConverted.pcd  teil_leafSize5.pcd
poseEstimationCorrespondenceGrouping/: CMakeLists.txt  poseEstimationCorrespondenceGrouping.cpp
poseEstimationCorrespondenceGrouping/data/aufgenommen/: teil_aufgenommen_down.pcd  teil_aufgenommen_seitlich_2.pcd
poseEstimationPPF/: CMakeLists.txt  poseEstimationPPF.cpp
poseEstimationPPF/data/: modelList.txt  pointcloud_1_up_prepared.pcd  pointcloud_2.pcd  pointcloud_6.pcd
preparingPCDs/: CMakeLists.txt  preparingPCDs.cpp
preparingPCDs/data/: listOfScenes.txt  pointcloud_1_up_turned.pcd
preparingPCDs/data/Scene/: pointcloud_3.pcd
preparingPCDs/data/teil_aufgenommen/: teil_aufgenommen_down.pcd  teil_aufgenommen_seitlich_1.pcd  teil_aufgenommen_seitlich_2.pcd  teil_aufgenommen_seitlich_3.pcd  teil_aufgenommen_up.pcd
preparingPCDs/results/model/aufgenommen/: teil_aufgenommen_seitlich_1.pcd  teil_aufgenommen_up.pcd
robustPoseEstimationOfRigidObjects/: alignment_prerejective.cpp
spz/: CMakeLists.txt  package.xml
test/: CMakeLists.txt  pcd_write.cpp
(+14 files in other folders)
