cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(POSE_ESTIMATION_CORRESPONENCE_GROUPING_PROJECT)
find_package(PCL 1.3 REQUIRED)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(poseEstimationCorrespondenceGrouping poseEstimationCorrespondenceGrouping.cpp)
target_link_libraries(poseEstimationCorrespondenceGrouping ${PCL_LIBRARIES})